--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-19 16:12+0200\n"
+"POT-Creation-Date: 2024-05-20 14:21+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,11 +23,14 @@ msgstr ""
 #: activities/templates/activities/activity_booking.html:11
 #: activities/templates/activities/activity_booking.html:15
 msgid "Reservation"
-msgstr ""
+msgstr "Réservation"
 
 #: accommodations/templates/accommodations/accommodation_booking.html:14
+#: accommodations/templates/accommodations/accommodation_list.html:23
 #: accommodations/templates/accommodations/make_payment.html:14
-#: accounts/templates/base.html:63
+#: accounts/templates/accounts/profile.html:14
+#: accounts/templates/accounts/user_form.html:14
+#: accounts/templates/base.html:67
 #: activities/templates/activities/activities_list.html:23
 #: activities/templates/activities/activity_booking.html:13
 #: bookings/templates/bookings/bookings_list.html:13
@@ -35,70 +38,73 @@ msgstr ""
 #: flights/templates/flights/flights_search.html:22
 #: flights/templates/flights/generated_route.html:16
 msgid "Home"
-msgstr ""
+msgstr "Accueil"
 
 #: accommodations/templates/accommodations/accommodation_booking.html:40
 msgid "Date Check In"
-msgstr ""
+msgstr "Date d'arrivée"
 
 #: accommodations/templates/accommodations/accommodation_booking.html:45
+#: accounts/templates/accounts/profile.html:44
 msgid "Date Check Out"
-msgstr ""
+msgstr "Date de départ"
 
 #: accommodations/templates/accommodations/accommodation_booking.html:54
 #: accommodations/templates/accommodations/accommodation_detail.html:55
+#: accounts/templates/accounts/profile.html:53
 msgid "Adults"
-msgstr ""
+msgstr "Adultes"
 
 #: accommodations/templates/accommodations/accommodation_booking.html:61
 #: accommodations/templates/accommodations/accommodation_detail.html:67
+#: accounts/templates/accounts/profile.html:60
 msgid "Children"
-msgstr ""
+msgstr "Enfants"
 
 #: accommodations/templates/accommodations/accommodation_booking.html:74
+#: accounts/templates/accounts/profile.html:73
 msgid "Notes"
-msgstr ""
+msgstr "Notes"
 
 #: accommodations/templates/accommodations/accommodation_detail.html:13
-#: accommodations/templates/accommodations/accommodation_list.html:23
 #: accommodations/templates/accommodations/accommodation_reviews.html:13
 #: accommodations/templates/accommodations/accommodation_reviews.html:57
 #: activities/templates/activities/activity_detail.html:12
 #: activities/templates/activities/activity_reviews.html:57
 msgid "Reviews"
-msgstr ""
+msgstr "Avis"
 
 #: accommodations/templates/accommodations/accommodation_detail.html:38
 #: bookings/templates/bookings/bookings_list.html:53
 msgid "Check In"
-msgstr ""
+msgstr "Arrivée"
 
 #: accommodations/templates/accommodations/accommodation_detail.html:45
 #: bookings/templates/bookings/bookings_list.html:56
 msgid "Check Out"
-msgstr ""
+msgstr "Départ"
 
 #: accommodations/templates/accommodations/accommodation_detail.html:81
 msgid "Check Availability"
-msgstr ""
+msgstr "Vérifier la disponibilité"
 
 #: accommodations/templates/accommodations/accommodation_detail.html:106
 msgid "per night"
-msgstr ""
+msgstr "par nuit"
 
 #: accommodations/templates/accommodations/accommodation_list.html:14
 #: activities/templates/activities/activities_list.html:14
 #: flights/templates/flights/flights_search.html:13
 #: recommendations/templates/recommendations/home.html:17
 msgid "Search Results"
-msgstr ""
+msgstr "Résultats de la recherche"
 
 #: accommodations/templates/accommodations/accommodation_list.html:16
 #: accommodations/templates/accommodations/accommodation_list.html:25
-#: accounts/templates/base.html:64
+#: accounts/templates/base.html:68
 #: recommendations/templates/recommendations/home.html:73
 msgid "Accommodations"
-msgstr ""
+msgstr "Hébergements"
 
 #: accommodations/templates/accommodations/accommodation_list.html:49
 #: accommodations/templates/accommodations/accommodation_list.html:56
@@ -108,103 +114,117 @@ msgstr ""
 #: recommendations/templates/recommendations/home.html:50
 #: recommendations/templates/recommendations/home.html:57
 msgid "Search"
-msgstr ""
+msgstr "Rechercher"
 
 #: accommodations/templates/accommodations/accommodation_reviews.html:37
 #: activities/templates/activities/activity_reviews.html:37
 msgid "Review"
-msgstr ""
+msgstr "Avis"
 
 #: accommodations/templates/accommodations/accommodation_reviews.html:44
 #: activities/templates/activities/activity_reviews.html:44
 msgid "Add Review"
-msgstr ""
+msgstr "Ajouter un avis"
 
 #: accommodations/templates/accommodations/make_payment.html:12
 #: accommodations/templates/accommodations/make_payment.html:16
 msgid "Payment"
-msgstr ""
+msgstr "Paiement"
 
 #: accommodations/templates/accommodations/make_payment.html:40
 msgid "Phone Number"
-msgstr ""
+msgstr "Numéro de téléphone"
 
 #: accommodations/templates/accommodations/make_payment.html:61
 msgid "Price"
-msgstr ""
+msgstr "Prix"
 
 #: accounts/models.py:8
 msgid "email address"
-msgstr ""
+msgstr "adresse e-mail"
 
-#: accounts/templates/accounts/profile.html:13 accounts/templates/base.html:68
+#: accounts/templates/accounts/profile.html:12
+#: accounts/templates/accounts/profile.html:16
+#: accounts/templates/accounts/user_form.html:12
+#: accounts/templates/accounts/user_form.html:16
+#: accounts/templates/base.html:72
 msgid "Profile"
-msgstr ""
+msgstr "Profil"
+
+#: accounts/templates/accounts/profile.html:40
+#: accounts/templates/accounts/user_form.html:52
+#: accounts/templates/registration/login.html:48
+#: accounts/templates/registration/register.html:47
+#: flights/templates/flights/flight_booking.html:58
+msgid "Email"
+msgstr "E-mail"
+
+#: accounts/templates/accounts/user_form.html:40
+msgid "First Name"
+msgstr "Prénom"
+
+#: accounts/templates/accounts/user_form.html:45
+msgid "Last Name"
+msgstr "Nom de famille"
 
 #: accounts/templates/base.html:9
 #: recommendations/templates/recommendations/home.html:19
 msgid "Online Travel Planner"
-msgstr ""
+msgstr "Planificateur de voyage en ligne"
 
-#: accounts/templates/base.html:43
+#: accounts/templates/base.html:47
 msgid "Change Language"
-msgstr ""
+msgstr "Changer de langue"
 
-#: accounts/templates/base.html:65
+#: accounts/templates/base.html:69
 #: activities/templates/activities/activities_list.html:16
 #: activities/templates/activities/activities_list.html:25
 #: recommendations/templates/recommendations/home.html:102
 msgid "Activities"
-msgstr ""
+msgstr "Activités"
 
-#: accounts/templates/base.html:66
+#: accounts/templates/base.html:70
 #: flights/templates/flights/flights_search.html:15
 #: flights/templates/flights/flights_search.html:24
 #: flights/templates/flights/flights_search.html:105
 msgid "Flights"
-msgstr ""
+msgstr "Vols"
 
-#: accounts/templates/base.html:67
+#: accounts/templates/base.html:71
 #: bookings/templates/bookings/bookings_list.html:11
 #: bookings/templates/bookings/bookings_list.html:15
 msgid "Bookings"
-msgstr ""
+msgstr "Réservations"
 
-#: accounts/templates/base.html:72
+#: accounts/templates/base.html:76
 msgid "Sign Out"
-msgstr ""
+msgstr "Déconnexion"
 
-#: accounts/templates/base.html:75
+#: accounts/templates/base.html:80
 #: accounts/templates/registration/login.html:13
 #: accounts/templates/registration/login.html:17
 #: accounts/templates/registration/register.html:15
 msgid "Sign In"
-msgstr ""
+msgstr "Se connecter"
 
 #: accounts/templates/registration/login.html:15
 #: accounts/templates/registration/register.html:17
 msgid "Sign Up"
-msgstr ""
-
-#: accounts/templates/registration/login.html:48
-#: accounts/templates/registration/register.html:47
-#: activities/templates/activities/activity_booking.html:61
-#: flights/templates/flights/flight_booking.html:58
-msgid "Email"
-msgstr ""
+msgstr "S'inscrire"
 
 #: accounts/templates/registration/login.html:56
 #: accounts/templates/registration/register.html:54
 msgid "Password"
-msgstr ""
+msgstr "Mot de passe"
 
 #: accounts/templates/registration/register.html:13
 msgid "Sign up"
-msgstr ""
+msgstr "S'inscrire"
 
 #: accounts/templates/registration/register.html:61
 msgid "Confirm Password"
-msgstr ""
+msgstr "Confirmer le mot de passe"
+
 
 #: activities/templates/activities/activity_booking.html:39
 #: bookings/templates/bookings/bookings_list.html:110
@@ -220,11 +240,6 @@ msgstr ""
 #: activities/templates/activities/activity_booking.html:59
 #: flights/templates/flights/flight_booking.html:56
 msgid "Name"
-msgstr ""
-
-#: activities/templates/activities/activity_booking.html:60
-#: flights/templates/flights/flight_booking.html:57
-msgid "Phone"
 msgstr ""
 
 #: activities/templates/activities/activity_detail.html:14
@@ -1477,6 +1492,10 @@ msgstr ""
 msgid "Flight"
 msgstr ""
 
+#: flights/templates/flights/flight_booking.html:57
+msgid "Phone"
+msgstr ""
+
 #: flights/templates/flights/flights_search.html:48
 msgid "Origin"
 msgstr ""
@@ -1494,199 +1513,3 @@ msgstr ""
 #: recommendations/templates/recommendations/home.html:103
 msgid "View All"
 msgstr ""
-
-
-
-
-
-
-
-
-
-
-
-
-
-#: accommodations/templates/accommodations/accommodation_booking.html:12
-#: accommodations/templates/accommodations/accommodation_booking.html:16
-#: activities/templates/activities/activity_booking.html:11
-#: activities/templates/activities/activity_booking.html:15
-msgid "Reservation"
-msgstr "Réservation"
-
-#: accommodations/templates/accommodations/accommodation_booking.html:14
-#: accommodations/templates/accommodations/make_payment.html:14
-#: accounts/templates/base.html:63
-#: activities/templates/activities/activities_list.html:23
-#: activities/templates/activities/activity_booking.html:13
-#: bookings/templates/bookings/bookings_list.html:13
-#: flights/templates/flights/flight_booking.html:13
-#: flights/templates/flights/flights_search.html:22
-#: flights/templates/flights/generated_route.html:16
-msgid "Home"
-msgstr "Accueil"
-
-#: accommodations/templates/accommodations/accommodation_booking.html:40
-msgid "Date Check In"
-msgstr "Date d'arrivée"
-
-#: accommodations/templates/accommodations/accommodation_booking.html:45
-msgid "Date Check Out"
-msgstr "Date de départ"
-
-#: accommodations/templates/accommodations/accommodation_booking.html:54
-#: accommodations/templates/accommodations/accommodation_detail.html:55
-msgid "Adults"
-msgstr "Adultes"
-
-#: accommodations/templates/accommodations/accommodation_booking.html:61
-#: accommodations/templates/accommodations/accommodation_detail.html:67
-msgid "Children"
-msgstr "Enfants"
-
-#: accommodations/templates/accommodations/accommodation_booking.html:74
-msgid "Notes"
-msgstr "Notes"
-
-#: accommodations/templates/accommodations/accommodation_detail.html:13
-#: accommodations/templates/accommodations/accommodation_list.html:23
-#: accommodations/templates/accommodations/accommodation_reviews.html:13
-#: accommodations/templates/accommodations/accommodation_reviews.html:57
-#: activities/templates/activities/activity_detail.html:12
-#: activities/templates/activities/activity_reviews.html:57
-msgid "Reviews"
-msgstr "Avis"
-
-#: accommodations/templates/accommodations/accommodation_detail.html:38
-#: bookings/templates/bookings/bookings_list.html:53
-msgid "Check In"
-msgstr "Arrivée"
-
-#: accommodations/templates/accommodations/accommodation_detail.html:45
-#: bookings/templates/bookings/bookings_list.html:56
-msgid "Check Out"
-msgstr "Départ"
-
-#: accommodations/templates/accommodations/accommodation_detail.html:81
-msgid "Check Availability"
-msgstr "Vérifier la disponibilité"
-
-#: accommodations/templates/accommodations/accommodation_detail.html:106
-msgid "per night"
-msgstr "par nuit"
-
-#: accommodations/templates/accommodations/accommodation_list.html:14
-#: activities/templates/activities/activities_list.html:14
-#: flights/templates/flights/flights_search.html:13
-#: recommendations/templates/recommendations/home.html:17
-msgid "Search Results"
-msgstr "Résultats de la recherche"
-
-#: accommodations/templates/accommodations/accommodation_list.html:16
-#: accommodations/templates/accommodations/accommodation_list.html:25
-#: accounts/templates/base.html:64
-#: recommendations/templates/recommendations/home.html:73
-msgid "Accommodations"
-msgstr "Hébergements"
-
-#: accommodations/templates/accommodations/accommodation_list.html:49
-#: accommodations/templates/accommodations/accommodation_list.html:56
-#: activities/templates/activities/activities_list.html:49
-#: activities/templates/activities/activities_list.html:56
-#: flights/templates/flights/flights_search.html:62
-#: recommendations/templates/recommendations/home.html:50
-#: recommendations/templates/recommendations/home.html:57
-msgid "Search"
-msgstr "Rechercher"
-
-#: accommodations/templates/accommodations/accommodation_reviews.html:37
-#: activities/templates/activities/activity_reviews.html:37
-msgid "Review"
-msgstr "Avis"
-
-#: accommodations/templates/accommodations/accommodation_reviews.html:44
-#: activities/templates/activities/activity_reviews.html:44
-msgid "Add Review"
-msgstr "Ajouter un avis"
-
-#: accommodations/templates/accommodations/make_payment.html:12
-#: accommodations/templates/accommodations/make_payment.html:16
-msgid "Payment"
-msgstr "Paiement"
-
-#: accommodations/templates/accommodations/make_payment.html:40
-msgid "Phone Number"
-msgstr "Numéro de téléphone"
-
-#: accommodations/templates/accommodations/make_payment.html:61
-msgid "Price"
-msgstr "Prix"
-
-#: accounts/models.py:8
-msgid "email address"
-msgstr "adresse e-mail"
-
-#: accounts/templates/accounts/profile.html:13 accounts/templates/base.html:68
-msgid "Profile"
-msgstr "Profil"
-
-#: accounts/templates/base.html:9
-#: recommendations/templates/recommendations/home.html:19
-msgid "Online Travel Planner"
-msgstr "Planificateur de voyage en ligne"
-
-#: accounts/templates/base.html:43
-msgid "Change Language"
-msgstr "Changer de langue"
-
-#: accounts/templates/base.html:65
-#: activities/templates/activities/activities_list.html:16
-#: activities/templates/activities/activities_list.html:25
-#: recommendations/templates/recommendations/home.html:102
-msgid "Activities"
-msgstr "Activités"
-
-#: accounts/templates/base.html:66
-#: flights/templates/flights/flights_search.html:15
-#: flights/templates/flights/flights_search.html:24
-#: flights/templates/flights/flights_search.html:105
-msgid "Flights"
-msgstr "Vols"
-
-#: accounts/templates/base.html:67
-#: bookings/templates/bookings/bookings_list.html:11
-#: bookings/templates/bookings/bookings_list.html:15
-msgid "Bookings"
-msgstr "Réservations"
-
-#: accounts/templates/base.html:72
-msgid "Sign Out"
-msgstr "Déconnexion"
-
-#: accounts/templates/base.html:75
-#: accounts/templates/registration/login.html:13
-#: accounts/templates/registration/login.html:17
-#: accounts/templates/registration/register.html:15
-msgid "Sign In"
-msgstr "Se connecter"
-
-#: accounts/templates/registration/login.html:15
-#: accounts/templates/registration/register.html:17
-msgid "Sign Up"
-msgstr "S'inscrire"
-
-#: accounts/templates/registration/login.html:48
-#: accounts/templates/registration/register.html:47
-#: activities/templates/activities/activity_booking.html:61
-#: flights/templates/flights/flight_booking.html:58
-msgid "Email"
-msgstr "E-mail"
-
-#: accounts/templates/registration/login.html:56
-#: accounts/templates/registration/register.html:54
-msgid "Password"
-msgstr "Mot de passe"
-
-#: accounts/templates/registration/register.html:13
-msgid "Sign up"
-msgstr "S'inscrire"
