--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-20 14:21+0200\n"
+"POT-Creation-Date: 2024-05-20 14:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -203,6 +203,7 @@ msgstr "Déconnexion"
 #: accounts/templates/base.html:80
 #: accounts/templates/registration/login.html:13
 #: accounts/templates/registration/login.html:17
+#: accounts/templates/registration/login.html:69
 #: accounts/templates/registration/register.html:15
 msgid "Sign In"
 msgstr "Se connecter"
@@ -225,49 +226,48 @@ msgstr "S'inscrire"
 msgid "Confirm Password"
 msgstr "Confirmer le mot de passe"
 
-
 #: activities/templates/activities/activity_booking.html:39
 #: bookings/templates/bookings/bookings_list.html:110
 msgid "Date"
-msgstr ""
+msgstr "Date"
 
 #: activities/templates/activities/activity_booking.html:43
 #: bookings/templates/bookings/bookings_list.html:113
 #: flights/templates/flights/flight_booking.html:39
 msgid "Number of People"
-msgstr ""
+msgstr "Nombre de personnes"
 
 #: activities/templates/activities/activity_booking.html:59
 #: flights/templates/flights/flight_booking.html:56
 msgid "Name"
-msgstr ""
+msgstr "Nom"
 
 #: activities/templates/activities/activity_detail.html:14
 #: bookings/templates/bookings/bookings_list.html:107
 msgid "Activity"
-msgstr ""
+msgstr "Activité"
 
 #: activities/templates/activities/activity_detail.html:40
 #: flights/templates/flights/generated_route.html:65
 msgid "Book"
-msgstr ""
+msgstr "Réserver"
 
 #: bookings/templates/bookings/bookings_list.html:36
 msgid "Accommodations Bookings"
-msgstr ""
+msgstr "Réservations d'hébergement"
 
 #: bookings/templates/bookings/bookings_list.html:48
 msgid "Accommodation"
-msgstr ""
+msgstr "Hébergement"
 
 #: bookings/templates/bookings/bookings_list.html:50
 msgid "Room"
-msgstr ""
+msgstr "Chambre"
 
 #: bookings/templates/bookings/bookings_list.html:59
 #: bookings/templates/bookings/bookings_list.html:116
 msgid "Status"
-msgstr ""
+msgstr "Statut"
 
 #: bookings/templates/bookings/bookings_list.html:95
 msgid "Activities Booking"
